# CoT_StepWise_Analysis

./: .gitignore  README.md  thought_anchors_experiment.tex
Momentum_1/: momentum_anchors_implementation.md  momentum_anchors_implementation.tex  momentum_anchors_v2 (3).tex  momentum_anchors_v2 (4).md
Momentum_2/: v3_implementation.md  v3_implementation.tex  v3_report (3).md
Propogation_Analysis/: thought_anchors_experiments_v3 (3).tex  thought_anchors_experiments_v3 (4).md  thought_anchors_implementation.md  thought_anchors_implementation.tex
Propogation_Analysis/ta/: .gitignore  README.md  pyproject.toml  requirements.lock.txt
Propogation_Analysis/ta/config/: phase0_babi.yaml
Propogation_Analysis/ta/core/: __init__.py
Propogation_Analysis/ta/core/signals/: __init__.py
Propogation_Analysis/ta/infra/: __init__.py  manifest.py  schema.py  seeds.py  splits.py  store.py
Propogation_Analysis/ta/run/: smoke_runner.py
Propogation_Analysis/ta/scripts/: bootstrap_phase0.sh  fetch_phase0_assets.py
Propogation_Analysis/ta/smoke/: __init__.py  test_manifest.py  test_schema.py  test_seeds_and_splits.py  test_store.py
superpowers/: instruction_execution_playbook.md  results_analysis_playbook.md
