[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thought-anchors"
version = "0.1.0"
description = "Phase 0 implementation scaffold for the thought anchors propagation analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.7,<2",
  "numpy>=1.26,<2",
  "pyarrow>=16,<18",
  "pyyaml>=6,<7",
  "safetensors>=0.4,<1",
  "scikit-learn>=1.4,<2",
  "scipy>=1.11,<2",
  "torch>=2.7,<3",
  "transformers>=4.51,<5",
]

[tool.setuptools]
packages = []
